--- a/package.json
+++ b/package.json
@@ -49,15 +49,17 @@
   "devDependencies": {
     "bower": "~1.2.8",
     "grunt": "~0.4.2",
+    "grunt-angular-gettext": "^0.2.15",
     "grunt-cli": "~0.1.11",
-    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-sass": "^0.4.0",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-watch": "*",
-    "grunt-macreload": "*",
     "grunt-css": "jcvernaleo/grunt-css",
-    "grunt-markdown": "~0.5.0",
-    "grunt-angular-gettext": "^0.2.15"
+    "grunt-macreload": "*",
+    "grunt-markdown": "~0.5.0"
   },
   "engines": {
     "node": "0.10.40",
